# monte-carlo-option-pricer

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  start copy.bat  start.bat
.devcontainer/: devcontainer.json
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/v1/routes/: prices.py  simulate.py  websocket.py
backend/app/core/: database.py
backend/app/crud/: stock.py
backend/app/models/: stock.py
backend/app/schemas/: simulate.py
backend/app/services/: black_scholes.py  gbm.py  payoff.py  pricer.py  random_generator.py
backend/scripts/: seed.py
backend/tests/: conftest.py  test_convergence.py  test_engine.py
docs/: TECHNICAL_DOC.md
frontend/: eslint.config.ts  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/charts/: ConvergenceChart.module.css  ConvergenceChart.tsx  PayoffHistogram.module.css  PayoffHistogram.tsx  PriceHistory.module.css  PriceHistory.tsx
frontend/src/components/config/: ConfigPanel.module.css  ConfigPanel.tsx  OptionForm.module.css  OptionForm.tsx  StockSelector.module.css  StockSelector.tsx
frontend/src/components/layout/: AppShell.module.css  AppShell.tsx  DisclaimerModal.module.css  DisclaimerModal.tsx  Footer.module.css  Footer.tsx  TopBar.module.css  (+1 more)
frontend/src/context/: LanguageContext.tsx  ThemeContext.tsx
frontend/src/hooks/: useConvergence.ts  usePriceHistory.ts
frontend/src/messages/: de.ts  en.ts  it.ts
frontend/src/styles/: global.css
(+6 files in other folders)
