[project]
name = "mc-option-pricer"
version = "0.1.0"
description = "Monte Carlo Option Pricing Engine"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "pydantic-settings>=2.0",
    "alembic>=1.14",
    "numpy>=2.0",
    "scipy>=1.14",
    "websockets>=14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.8",
    "yahooquery>=2.3",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]